2011-12-11 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #31865. Cleanup of CLI export script. Credits go to Francois Suter for investigating the issue and providing patches.

2011-11-01 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #30397. Allow for transformation of custom tags in CAT XML export process. Credits go to Francois Suter for investigating the issue and providing patches.
	* [~BUG] Fixes #27683 Fixes #8875. Add langDatabaseOverlay to documentation.

2011-10-14 Daniel Zielinski <development@loctimize.com>
	* [~BUG] Fixes #31469. Delete old translations did not work. Credits also go to Francois Suter.

2011-09-29 Andreas Otto <andreas@otto-hanika.de>
	* [~BUG] Fixes #27132. Use 1=1 instead of 1 in where clause.
	* [~BUG] Improved RTE handling. Credits go to Helmut Hummel for sending a patch.

2011-08-23 Daniel Zielinski <development@loctimize.com>
	* Fixed bug with Excel XML export/import
	* Added preview URL attribute in CATXML for source language
	* Improved filetype for SDL Trados Studio 2009
	* Changed version to 3.3.10

2011-07-30 Andreas Otto <andreas@otto-hanika.de>
	* [~TASK] Change calls to deprecated PHP methods and deprecated TYPO3 methods up to version 4.4.
	* [~BUG] Fixes a bug where the XML export was only exporting the default language in CLI mode even when a different source language was set in the configuration.
	* [~FEATURE] Add option to enable / disable the use of status icons in pre 4.5 pagetree.

2011-07-29 Andreas Otto <andreas@otto-hanika.de>
	* [~TASK] Fixes #8873. Increase limit for tablelist.
	* [~BUGFIX] Merge difference between 36038 and head.

2011-05-17 Daniel Zielinski <development@loctimize.com>
	* Added version requirement
	* Changed version to 3.3.9

2011-05-10 Daniel Zielinski <development@loctimize.com>
	* Changed version to 3.3.8
	* Added memoQ.mqres filter
	* Added SDL Trados 2009 filetype
	* Changed XML2RTE to correct import of empty <p/> elements