@@ -18,15 +18,22 @@
 			<label index="error.object_not_loaded.msg">Localization Manager object not loaded!</label>
 			<label index="email.suject.msg">Translation job (%1$s-%2$s) from TYPO3 site: %3$s</label>
 			<label index="email.greeting.msg">Dear translator or translation project manager,</label>
-			<label index="email.new_translation_job.msg">There is a new translation job (%1$s-%2$s) available from TYPO3 site at %3$s.</label>
-			<label index="email.info.msg">For information how to download/translate this file please refer to the documentation.</label>
-			<label index="email.info.import.msg">The translated XML file can be imported using the TYPO3 Localization Manager (l10nmgr).</label>
+			<label index="email.new_translation_job.msg">There is a new translation job (%1$s-%2$s) available from TYPO3 site at %3$s.
+			</label>
+			<label index="email.info.msg">For information how to download/translate this file please refer to the
+				documentation.
+			</label>
+			<label index="email.info.import.msg">The translated XML file can be imported using the TYPO3 Localization Manager (l10nmgr).
+			</label>
 			<label index="email.goodbye.msg">Kind regards,</label>
 			<label index="email.info.exportef_file.msg">Exported file:</label>
-			<label index="email.new_translation_job_attached.msg">Attached is an XML file for translation (%1$s-%2$s) from TYPO3 site at %3$s.</label>
+			<label index="email.new_translation_job_attached.msg">Attached is an XML file for translation (%1$s-%2$s) from TYPO3 site at %3$s.
+			</label>
 			<label index="error.ftp.connection.msg">FTP upload error: Couldn't upload file %1$s%2$s</label>
 			<label index="error.ftp.connection_user.msg">FTP error: Couldn't connect as %1$s</label>
 			<label index="error.ftp.connection_failed.msg">FTP error: Connection failed!</label>
+			<label index="export.process.error.empty.message">Empty element</label>
+			<label index="export.process.error.invalid.message">Detected invalid characters in element</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="error.target_language_id.msg">Keine ID für Zielsprache angegeben!</label>
