@@ -1,5 +1,6 @@
 2011-12-11 Andreas Otto <andreas@otto-hanika.de>
-	* [~BUG] Fixes #31865. Cleanup of CLI export script. Credits go to Francois Suter for investigating the issue and providing patches.
+	* [~BUG] Fixes #31863. Missing messages in export script. Credits go to Francois Suter for investigating the issue and providing patches.
+	* [~TASK] Fixes #31865. Cleanup of CLI export script. Credits go to Francois Suter for investigating the issue and providing patches.
 
 2011-11-01 Andreas Otto <andreas@otto-hanika.de>
 	* [~BUG] Fixes #30397. Allow for transformation of custom tags in CAT XML export process. Credits go to Francois Suter for investigating the issue and providing patches.
